--- a/analysis/MSErank1sim.Rmd
+++ b/analysis/MSErank1sim.Rmd
@@ -402,7 +402,7 @@ N = 200
 P = 300
 Data = datamaker(N,P,L_pi,L_se,0.7,c(1),c(1),1,sqrt(16))
 # Data = datamaker(N,P,L_pi,L_se,0.1,c(1),c(1),1,sqrt(1))  sparse case
-# Data = datamaker(N,P,L_pi,L_se,1.0,c(1),c(1),1,sqrt(1))  dense case
+# Data = datamaker(N,P,L_pi,L_se,1.0,c(1),c(1),1,sqrt(25))  dense case
 RMSE = rep(NA,6)
 RMSE[1] = PMA.wrapper(Y_data)
 RMSE[2] = flash.wrapper(Y_data)
@@ -469,7 +469,7 @@ saveRDS(results,"./RES_rrmse.rds")
 ## RMSE sparse case 100 simulations
  
 ```{r}
-plot_res = function(output,title = "data",legend_position = "none", methods_name){
+plot_res = function(output,title = "data",legend_position = "none", methods_name,myColors){
   rmse = as.vector(output)
   N = dim(output)[1]
   methods = rep(methods_name, each = N)
@@ -477,7 +477,7 @@ plot_res = function(output,title = "data",legend_position = "none", methods_name
   p<-ggplot(df, aes(x=Method, y=RRMSE_diff, color=Method)) +
   geom_boxplot()+
   # geom_violin()+
-  ggtitle(title) +  theme_bw()+
+  ggtitle(title) +  theme_bw()+ scale_color_manual(values=myColors)+
     theme(legend.position= legend_position, legend.text=element_text(size=10),
           axis.text.y = element_text(size =12),
           axis.text.x = element_text(size =12,angle = 45, hjust = 1))
@@ -491,9 +491,11 @@ sparse_res = readRDS("../data/simulation/rankone/RMSE/result_sparse.rds")
 colnames(sparse_res) = c("PMD.cv2","flash","SFA","flash.pn","SVD","SSVD","PMD.cv1","SFAmix","SI.cv")
 sparse_diff = sparse_res - sparse_res[,2]
 methods_name = colnames(sparse_diff)
-p1 = plot_res(sparse_diff,title = "Difference from FLASH result (90% zeros)",methods_name = methods_name)
+fill_color = c("red","yellow3", "springgreen", "springgreen3", "cyan","cyan3", "deepskyblue","violet","purple")
+p1 = plot_res(sparse_diff,title = "Difference from FLASH result (90% zeros)",
+              methods_name = methods_name, myColors = fill_color)
 methods_name = colnames(sparse_diff)[c(1,2,3,4,5,7,9)]
-p1_cut = plot_res(sparse_diff[-22,c(1,2,3,4,5,7,9)],title = "Difference from FLASH result (90% zeros)",methods_name = methods_name)
+p1_cut = plot_res(sparse_diff[-22,c(1,2,3,4,5,7,9)],title = "Difference from FLASH result (90% zeros)",methods_name = methods_name,myColors = fill_color[c(1,2,3,4,5,7,9)])
 ```
 
 ## RMSE intermediate sparse case 100 simulations
@@ -505,9 +507,9 @@ sparse_diff = sparse_res - sparse_res[,2]
 # p2 = plot_res(sparse_diff,"Difference from FLASH result (30% zeros)")
 
 methods_name = colnames(sparse_diff)
-p2 = plot_res(sparse_diff,title = "Difference from FLASH result (30% zeros)",methods_name = methods_name)
+p2 = plot_res(sparse_diff,title = "Difference from FLASH result (30% zeros)",methods_name = methods_name,myColors = fill_color)
 methods_name = colnames(sparse_diff)[c(1,2,3,4,5,7,9)]
-p2_cut = plot_res(sparse_diff[,c(1,2,3,4,5,7,9)],title = "Difference from FLASH result (30% zeros)",methods_name = methods_name)
+p2_cut = plot_res(sparse_diff[,c(1,2,3,4,5,7,9)],title = "Difference from FLASH result (30% zeros)",methods_name = methods_name,myColors = fill_color[c(1,2,3,4,5,7,9)])
 ```
 
 
@@ -519,9 +521,9 @@ colnames(sparse_res) = c("PMD.cv2","flash","SFA","flash.pn","SVD","SSVD","PMD.cv
 sparse_diff = sparse_res - sparse_res[,2]
 # p3 = plot_res(sparse_diff,"Difference from FLASH result (0% zeros)")
 methods_name = colnames(sparse_diff)
-p3 = plot_res(sparse_diff,title = "Difference from FLASH result (0% zeros)",methods_name = methods_name)
+p3 = plot_res(sparse_diff,title = "Difference from FLASH result (0% zeros)",methods_name = methods_name,myColors = fill_color )
 methods_name = colnames(sparse_diff)[c(1,2,3,4,5,7,9)]
-p3_cut = plot_res(sparse_diff[,c(1,2,3,4,5,7,9)],title = "Difference from FLASH result (0% zeros)",methods_name = methods_name)
+p3_cut = plot_res(sparse_diff[,c(1,2,3,4,5,7,9)],title = "Difference from FLASH result (0% zeros)",methods_name = methods_name,myColors = fill_color[c(1,2,3,4,5,7,9)])
 ```
 
 ```{r}
